--- a/MyProject/package.json
+++ b/MyProject/package.json
@@ -27,7 +27,8 @@
     "react-native-screens": "~3.22.0",
     "react-redux": "^8.1.3",
     "redux-persist": "^6.0.0",
-    "expo-location": "~16.1.0"
+    "expo-location": "~16.1.0",
+    "react-native-maps": "1.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
